--- a/index.html
+++ b/index.html
@@ -52,10 +52,31 @@
 
     <section class="container">
       <hgroup class="main center">
-        <h1><mark>Podio + Looker</mark><br/>Unlocking the Power of Your Data</h1>
-        <p class="px-1">Install the extension in your looker and transform your Podio data <br/>into actionable insights with Looker: Intuitive and customizable dashboards</p>
-        <button class="outline mx-2">Install now</button>
+        <h1 class="main center"><mark>Pricing</mark><br/></h1>
       </hgroup>
+        <div class="grid mx-2 px-1">
+          <div>
+          <h3>1 Year - 1 app - $10</h3>
+            <p>Pay 10 USD for one app connection for a year or</p>
+            <ul>
+              <li>Connect you app in a looker dashboard</li>
+              <li>Unlimited requests</li>
+              <li>Multiple dashboards</li>
+              <li>Multiple views</li>
+            </ul>
+          </div>
+          <div>
+            <h3>1 Month - 5 apps - $50</p></h3>
+            <p>Pay 50 USD upto 5 app connections for a month</p>
+            <ul>
+              <li>Connect upto 5 apps in a looker dashboard</li>
+              <li>Unlimited requests</li>
+              <li>Multiple dashboards</li>
+              <li>Multiple views</li>
+            </ul>
+          </div>
+        </div>
+        <p class="center"><button class="outline mx-2">Get it now</button></p>
     </section>
 
     <div class="container grid">
