--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><strong>Chardgrids</strong></li>
           </ul>
           <ul>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="#price">Pricing</a></li>
             <li><a href="#">About us</a></li>
           </ul>
         </nav>
@@ -50,38 +50,35 @@
       </article>
     </section>
 
-    <section class="container">
+    <section id="price" class="container">
       <hgroup class="main center">
         <h1 class="main center"><mark>Pricing</mark><br/></h1>
       </hgroup>
-        <div class="grid mx-2 px-1">
-          <div>
-          <h3>1 Year - 1 app - $10</h3>
-            <p>Pay 10 USD for one app connection for a year or</p>
-            <ul>
-              <li>Connect you app in a looker dashboard</li>
-              <li>Unlimited requests</li>
-              <li>Multiple dashboards</li>
-              <li>Multiple views</li>
-            </ul>
+        <div class="grid px-1">
+          <div class="center" >
+            <h3>1 app - 1 Year - $10</h3>
+            <p>Pay 10 USD for one app connection for a year</p>
           </div>
-          <div>
-            <h3>1 Month - 5 apps - $50</p></h3>
+          <div class="center">
+            <h3>5 apps - 1 Month - $50</p></h3>
             <p>Pay 50 USD upto 5 app connections for a month</p>
-            <ul>
-              <li>Connect upto 5 apps in a looker dashboard</li>
-              <li>Unlimited requests</li>
-              <li>Multiple dashboards</li>
-              <li>Multiple views</li>
-            </ul>
           </div>
         </div>
-        <p class="center"><button class="outline mx-2">Get it now</button></p>
+        <ul class="price center">
+          <li><em data-tooltip="Check for limitations in Podio">Unlimited dat requests</em> for data</li>
+          <li>Connect the app with multiple <em data-tooltip="Add the connector as My data source in Looker to generate multiple dashboards ">dashboards</em></li>
+          <li>Filter your data using <em data-tooltip="Same connector across various views within the same application">multiple views</em> for the same connector</li>
+          <li><button class="outline">Get it now</button></li>
+        </ul>
     </section>
 
-    <div class="container grid">
+
+    <hgroup class="main center">
+      <h1 class="main center"><mark>Documentation</mark><br></h1>
+    </hgroup>
+    <div class="container grid">      
       <article>
-        <h3>Connecting Chartgrids with your Podio</h3>
+        <h3>Connecting Chartgrids with your Podio and Looker</h3>
         <p>No hassle, in just 5 minutes, you'll be exploring your data in the beautiful and customizable charts that Looker offers.<i> (No technical knowledge required)</i></p>
         <p><a href="https://www.youtube.com" target="_blank">Watch video</a>
       </article>
