--- a/index.html
+++ b/index.html
@@ -50,26 +50,30 @@
       </article>
     </section>
 
-    <section id="price" class="container">
-      <hgroup class="main center">
-        <h1 class="main center"><mark>Pricing</mark><br/></h1>
+    <section id="price" class="container px-1 mx-2">
+      <hgroup class="center">
+        <h1><mark>Pricing</mark></h1>
+        <p>Choose an option that's right for you.</p>
       </hgroup>
         <div class="grid px-1">
           <div class="center" >
             <h3>1 app - 1 Year - $10</h3>
-            <p>Pay 10 USD for one app connection for a year</p>
-          </div>
+            <p>Pay 10 USD for one app connection for a year or</p>
+          </div>          
           <div class="center">
             <h3>5 apps - 1 Month - $50</p></h3>
             <p>Pay 50 USD upto 5 app connections for a month</p>
           </div>
-        </div>
+        </div>        
+        <hr/> 
+        <p class="center"><b>In addition to these great prices, you'll receive:</b></p>       
         <ul class="price center">
-          <li><em data-tooltip="Check for limitations in Podio">Unlimited dat requests</em> for data</li>
+          <li><em data-tooltip="Check for limitations in Podio">Unlimited data</em> requests</li>
           <li>Connect the app with multiple <em data-tooltip="Add the connector as My data source in Looker to generate multiple dashboards ">dashboards</em></li>
-          <li>Filter your data using <em data-tooltip="Same connector across various views within the same application">multiple views</em> for the same connector</li>
-          <li><button class="outline">Get it now</button></li>
+          <li>Filter your data using <em data-tooltip="Same connector across various views within the same application">multiple views</em> for the same connector</li>          
         </ul>
+        <hr/> 
+        <div class="center" ><button class="outline center">Get it now</button></div>
     </section>
 
 
