--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <article>
         <h3>Questions and support</h3>
         <p>Struggling to build your perfect Podio dashboard? Let us help! We can assist you in bringing your data to life with visually stunning and impactful dashboards.</p>
-        <p><a href="https://www.youtube.com" target="_blank">Contact us</a>
+        <p><a href="https://podio.com/webforms/26151443/1966636" target="_blank">Contact us</a>
       </article>
     </div>
 
