--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   <!-- Styles.css -->
   <link rel="stylesheet" href="assets/css/styles.css">
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLYSFJF50P"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZLYSFJF50P');
+  </script>
+
   <body>
 
     <div class="container">
@@ -39,7 +48,7 @@
     <section class="container">
       <hgroup class="main center">
         <h1><mark>Podio + Looker</mark><br/>Unlocking the Power of Your Data</h1>
-        <p class="px-1">Install the extension in your looker and transform your Podio data <br/>into actionable insights with Looker: Intuitive and customizable dashboards</p>
+        <p class="px-1">Install the extension in <a href="https://lookerstudio.google.com/overview" target="_blank"><em data-tooltip="Google's Business Intelligent platform">Looker Studio</em></a> and transform your Podio data <br/>into actionable insights with Looker: Intuitive and customizable dashboards</p>
         <button class="outline mx-2">Install now</button>
       </hgroup>
     </section>
