--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   <!-- Styles.css -->
   <link rel="stylesheet" href="assets/css/styles.css">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLYSFJF50P"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7V6RVH0RGR"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-ZLYSFJF50P');
+    gtag('config', 'G-7V6RVH0RGR');
   </script>
 
   <body>
