--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header class="container">
           <nav>
           <ul>
-            <li><strong>Chartgrids</strong></li>
+            <li><img src="assets/img/logo.jpg" /><strong>Chartgrids</strong></li>
           </ul>
           <ul>
             <li><a href="#price">Pricing</a></li>
