--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header class="container">
           <nav>
           <ul>
-            <li><img src="assets/img/logo.jpg" /><strong>Chartgrids</strong></li>
+            <li><strong>Chartgrids</strong></li>
           </ul>
           <ul>
             <li><a href="#price">Pricing</a></li>
@@ -48,8 +48,9 @@
 
     <section class="container">
       <hgroup class="main center">
-        <h1><mark>Podio + Looker</mark><br/>Unlocking the Power of Your Data</h1>
-        <p class="px-1">Install the extension in <a href="https://lookerstudio.google.com/overview" target="_blank"><em data-tooltip="Google's Business Intelligent platform">Looker Studio</em></a> and transform your Podio data <br/>into actionable insights with Looker: Intuitive and customizable dashboards</p>
+        <img style="width: 124px;" src="assets/img/logo.jpg" />
+        <h1 style="margin-bottom: 1em;"><mark>Podio + Looker</mark><br/>Unlocking the Power of Your Data</h1>
+        <p class="px-1" style="max-width: 600px;">Install the extension in <a href="https://lookerstudio.google.com/overview" target="_blank"><em data-tooltip="Google's Business Intelligent platform">Looker Studio</em></a> and transform your Podio data into actionable insights with Looker. Intuitive and customizable dashboards</p>
         <button class="outline mx-2">Install now</button>
       </hgroup>
     </section>
