Changing the business model to be more profitable

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-<html lang="en"><head>
+<html lang="en">
+
+<head>
   <meta charset="UTF-8">
   <title>Chart Grids</title>
-  <meta name="description" content="Display your organization's data from Podio in beautiful chart grids.  Use line charts, pie charts and labels to create dashboards easy, fast and cheap.">
+  <meta name="description"
+    content="Display your organization's data from Podio in beautiful chart grids.  Use line charts, pie charts and labels to create dashboards easy, fast and cheap.">
   <meta name="robots" content="index">
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="/favicon.ico">
 
   <!-- Pico.css -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.3/css/pico.min.css"
-  />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.3/css/pico.min.css" />
 
   <!-- Styles.css -->
   <link rel="stylesheet" href="assets/css/styles.css">
@@ -20,93 +20,104 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-7V6RVH0RGR"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-7V6RVH0RGR');
   </script>
 
-  <body>
+<body>
 
-    <div class="container">
+  <div class="container">
 
-       <!-- Header -->
-        <header class="container">
-          <nav>
-          <ul>
-            <li><strong>Chartgrids</strong></li>
-          </ul>
-          <ul>
-            <li><a href="#price">Pricing</a></li>
-            <li><a href="#">About us</a></li>
-          </ul>
-        </nav>
-        </header>
-        <!-- ./ Header -->
-
-    </div>
-
-    <section class="container">
-      <hgroup class="main center">
-        <img style="width: 124px;" src="assets/img/logo.jpg" />
-        <h1 style="margin-bottom: 1em;"><mark>Podio + Looker</mark><br/>Unlocking the Power of Your Data</h1>
-        <p class="px-1" style="max-width: 600px;">Install the extension in <a href="https://lookerstudio.google.com/overview" target="_blank"><em data-tooltip="Google's Business Intelligent platform">Looker Studio</em></a> and transform your Podio data into actionable insights with Looker. Intuitive and customizable dashboards</p>
-        <button class="outline mx-2">Install now</button>
-      </hgroup>
-    </section>
-
-    <section class="container grid">
-      <article>
-        <img src="assets/img/g1.jpg" class="img-fluid py-3" alt="Chart Grids">
-      </article>
-    </section>
-
-    <section id="price" class="container px-1 mx-2">
-      <hgroup class="center">
-        <h1><mark>Pricing</mark></h1>
-        <p>Choose an option that's right for you.</p>
-      </hgroup>
-        <div class="grid px-1">
-          <div class="center" >
-            <h3>1 app - 1 Year - $10</h3>
-            <p>Pay 10 USD for one app connection for a year or</p>
-          </div>          
-          <div class="center">
-            <h3>5 apps - 1 Month - $50</p></h3>
-            <p>Pay 50 USD upto 5 app connections for a month</p>
-          </div>
-        </div>        
-        <hr/> 
-        <p class="center"><b>In addition to these great prices, you'll receive:</b></p>       
-        <ul class="price center">
-          <li><em data-tooltip="Check for limitations in Podio">Unlimited data</em> requests</li>
-          <li>Connect the app with multiple <em data-tooltip="Add the connector as My data source in Looker to generate multiple dashboards ">dashboards</em></li>
-          <li>Filter your data using <em data-tooltip="Same connector across various views within the same application">multiple views</em> for the same connector</li>          
+    <!-- Header -->
+    <header class="container">
+      <nav>
+        <ul>
+          <li><strong>Chartgrids</strong></li>
         </ul>
-        <hr/> 
-        <div class="center" ><button class="outline center">Get it now</button></div>
-    </section>
+        <ul>
+          <li><a href="#price">Pricing</a></li>
+          <li><a href="#">About us</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- ./ Header -->
 
+  </div>
 
+  <section class="container">
     <hgroup class="main center">
-      <h1 class="main center"><mark>Documentation</mark><br></h1>
+      <img style="width: 124px;" src="assets/img/logo.jpg" />
+      <h1 style="margin-bottom: 1em;"><mark>Podio + Looker</mark><br />Unlocking the Power of Your Data</h1>
+      <p class="px-1" style="max-width: 600px;">Install the extension in <a
+          href="https://lookerstudio.google.com/overview" target="_blank"><em
+            data-tooltip="Google's Business Intelligent platform">Looker Studio</em></a> and transform your Podio data
+        into actionable insights with Looker. Intuitive and customizable dashboards</p>
+      <button class="outline mx-2">Install now</button>
     </hgroup>
-    <div class="container grid">      
-      <article>
-        <h3>Connecting Chartgrids with your Podio and Looker</h3>
-        <p>No hassle, in just 5 minutes, you'll be exploring your data in the beautiful and customizable charts that Looker offers.<i> (No technical knowledge required)</i></p>
-        <p><a href="https://www.youtube.com" target="_blank">Watch video</a>
-      </article>
-      <article>
-        <h3>Questions and support</h3>
-        <p>Struggling to build your perfect Podio dashboard? Let us help! We can assist you in bringing your data to life with visually stunning and impactful dashboards.</p>
-        <p><a href="https://podio.com/webforms/26151443/1966636" target="_blank">Contact us</a>
-      </article>
+  </section>
+
+  <section class="container grid">
+    <article>
+      <img src="assets/img/g1.jpg" class="img-fluid py-3" alt="Chart Grids">
+    </article>
+  </section>
+
+  <section id="price" class="container px-1 mx-2">
+    <hgroup class="center">
+      <h1><mark>Pricing</mark></h1>
+      <p>Choose an option that's right for you.</p>
+    </hgroup>
+    <div class="grid px-1">
+      <div class="center">
+        <h3>1 app - 1 Year - $100</h3>
+        <p>Pay 10 USD for one app connection for a year or</p>
+      </div>
+      <div class="center">
+        <h3>1 apps - 1 Month - $10</p>
+        </h3>
+        <p>Pay 10 USD for 1 app connections for a month <br /><small><i>minimun getting 3 apps</i></small></p>
+      </div>
     </div>
+    <hr />
+    <p class="center"><b>In addition to these great prices, you'll receive:</b></p>
+    <ul class="price center">
+      <li><em data-tooltip="Check for limitations in Podio">Unlimited data</em> requests</li>
+      <li>Connect the app with multiple <em
+          data-tooltip="Add the connector as My data source in Looker to generate multiple dashboards ">dashboards</em>
+      </li>
+      <li>Filter your data using <em
+          data-tooltip="Same connector across various views within the same application">multiple views</em> for the
+        same connector</li>
+    </ul>
+    <hr />
+    <div class="center"><button class="outline center">Get it now</button></div>
+  </section>
 
-    <footer class="container">
-      <small class="copy">Copyrights Chartgrids</small>
-    </footer>
 
-  </body>
+  <hgroup class="main center">
+    <h1 class="main center"><mark>Documentation</mark><br></h1>
+  </hgroup>
+  <div class="container grid">
+    <article>
+      <h3>Connecting Chartgrids with your Podio and Looker</h3>
+      <p>No hassle, in just 5 minutes, you'll be exploring your data in the beautiful and customizable charts that
+        Looker offers.<i> (No technical knowledge required)</i></p>
+      <p><a href="https://www.youtube.com" target="_blank">Watch video</a>
+    </article>
+    <article>
+      <h3>Questions and support</h3>
+      <p>Struggling to build your perfect Podio dashboard? Let us help! We can assist you in bringing your data to life
+        with visually stunning and impactful dashboards.</p>
+      <p><a href="https://podio.com/webforms/26151443/1966636" target="_blank">Contact us</a>
+    </article>
+  </div>
+
+  <footer class="container">
+    <small class="copy">Copyrights Chartgrids</small>
+  </footer>
+
+</body>
+
 </html>
