adding terms and privacy pages, favicon, and gitignore

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <meta name="robots" content="index">
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/png" href="/favicon.ico">
-
+  <meta name="theme-color" content="#ffffff">
+  <!-- Fav Icon -->
+  <link rel="icon" type="assets/x-icon" href="assets/favicon.ico">
   <!-- Pico.css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.3/css/pico.min.css" />
-
   <!-- Styles.css -->
   <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -29,7 +29,6 @@
 <body>
 
   <div class="container">
-
     <!-- Header -->
     <header class="container">
       <nav>
@@ -38,12 +37,10 @@
         </ul>
         <ul>
           <li><a href="#price">Pricing</a></li>
-          <li><a href="#">About us</a></li>
         </ul>
       </nav>
     </header>
     <!-- ./ Header -->
-
   </div>
 
   <section class="container">
@@ -115,7 +112,12 @@
   </div>
 
   <footer class="container">
-    <small class="copy">Copyrights Chartgrids</small>
+    <nav>
+      <ul><small class="copy">Copyrights Chartgrids</small></ul>
+      <ul>
+        <li><small class="copy"><a href="terms.html">Terms & Conditions</a></small></li>
+      </ul>
+    </nav>
   </footer>
 
 </body>
