adding contact and support pages and updating styles for them adding link to index and remove link from privacy and terms

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="container">
       <nav>
         <ul>
-          <li><strong>Chartgrids</strong></li>
+          <li><a class="no-link" href="/"><strong>Chartgrids</strong></a></li>
         </ul>
         <ul>
           <li><a href="#price">Pricing</a></li>
@@ -51,7 +51,7 @@
           href="https://lookerstudio.google.com/overview" target="_blank"><em
             data-tooltip="Google's Business Intelligent platform">Looker Studio</em></a> and transform your Podio data
         into actionable insights with Looker. Intuitive and customizable dashboards</p>
-      <button class="outline mx-2">Install now</button>
+      <button class="outline mx-2"><a class="no-link" href="contact.html">Get a Demo</a></button>
     </hgroup>
   </section>
 
@@ -88,8 +88,10 @@
           data-tooltip="Same connector across various views within the same application">multiple views</em> for the
         same connector</li>
     </ul>
-    <hr />
-    <div class="center"><button class="outline center">Get it now</button></div>
+    <div class="center"><button class="outline center"><a class="no-link" href="contact.html">Contact us</a></button>
+      <p><small><i>It's coming soon</i></small></p>
+      <hr />
+    </div>
   </section>
 
 
@@ -107,14 +109,15 @@
       <h3>Questions and support</h3>
       <p>Struggling to build your perfect Podio dashboard? Let us help! We can assist you in bringing your data to life
         with visually stunning and impactful dashboards.</p>
-      <p><a href="https://podio.com/webforms/26151443/1966636" target="_blank">Contact us</a>
+      <p><a href="contact.html">Contact us</a>
     </article>
   </div>
 
   <footer class="container">
     <nav>
-      <ul><small class="copy">Copyrights Chartgrids</small></ul>
+      <ul><small class="copy">Copyrights <a href="/">Chartgrids</a></small></ul>
       <ul>
+        <li><small class="copy"><a href="privacy.html">Privacy</a></small></li>
         <li><small class="copy"><a href="terms.html">Terms & Conditions</a></small></li>
       </ul>
     </nav>
