--- a/privacy.html
+++ b/privacy.html
@@ -28,6 +28,21 @@
 
 <body>
 
+  <div class="container">
+    <!-- Header -->
+    <header class="container">
+      <nav>
+        <ul>
+          <li><a class="no-link" href="/"><strong>Chartgrids</strong></a></li>
+        </ul>
+        <ul>
+
+        </ul>
+      </nav>
+    </header>
+    <!-- ./ Header -->
+  </div>
+
   <main class="container">
     <h1>Privacy Policy for ChartGrids.com</h1>
 
