--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.3/css/pico.min.css" />
   <!-- Styles.css -->
   <link rel="stylesheet" href="assets/css/styles.css">
-
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-7V6RVH0RGR"></script>
   <script>
@@ -56,7 +55,7 @@
 
   <footer class="container">
     <nav>
-      <ul><small class="copy">Copyrights <a href="/">Chartgrids</a></small></ul>
+      <ul><small class="copy">Copyrights <a class="no-link" href="/">Chartgrids</a></small></ul>
       <ul>
         <li><small class="copy"><a href="privacy.html">Privacy</a></small></li>
         <li><small class="copy"><a href="terms.html">Terms & Conditions</a></small></li>
