--- a/terms.html
+++ b/terms.html
@@ -108,7 +108,7 @@
 
   <footer class="container">
     <nav>
-      <ul><small class="copy">Copyrights <a href="/">Chartgrids</a></small></ul>
+      <ul><small class="copy">Copyrights <a class="no-link" href="/">Chartgrids</a></small></ul>
       <ul>
         <li><small class="copy"><a href="privacy.html">Privacy</a></small></li>
         <li><small class="copy"><a href="terms.html">Terms & Conditions</a></small></li>
