Changing the link for contact links to the contact page

--- a/terms.html
+++ b/terms.html
@@ -102,8 +102,8 @@
       material change will be determined at our sole discretion.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions about these Terms, please contact us <a
-        href="https://podio.com/webforms/26151443/1966636" target="_blank">here.</a></p>
+    <p>If you have any questions about these Terms, please contact us <a href="contact.html" target="_blank">here.</a>
+    </p>
   </main>
 
   <footer class="container">
