--- a/privacy.html
+++ b/privacy.html
@@ -104,7 +104,7 @@
     <p>We will retain your information for as long as your account is active or as needed to provide you services. If
       you
       wish to cancel your account or request that we no longer use your information to provide you services, contact us
-      <a href="https://podio.com/webforms/26151443/1966636" target="_blank">here.</a> We will retain and use your
+      <a href="contact.html" target="_blank">here.</a> We will retain and use your
       information as necessary to comply with our legal obligations, resolve
       disputes, and enforce our agreements.
     </p>
@@ -133,8 +133,8 @@
     <p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions about our Privacy Policy, please contact us <a
-        href="https://podio.com/webforms/26151443/1966636" target="_blank">here.</a></p>
+    <p>If you have any questions about our Privacy Policy, please contact us <a href="contact.html"
+        target="_blank">here.</a></p>
 
   </main>
 
