Adding title pages

--- a/support.html
+++ b/support.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Chart Grids</title>
+  <title>Support - Chart Grids</title>
   <meta name="description"
     content="Display your organization's data from Podio in beautiful chart grids.  Use line charts, pie charts and labels to create dashboards easy, fast and cheap.">
   <meta name="robots" content="index">
